--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,23 @@
-version: '3.8'
+---
+version: "3.0"
+
 services:
-  emby:
-    image: emby/embyserver
-    container_name: emby
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: unless-stopped
+    hostname: portainer
     ports:
-      - "${EMBY_PORT}:8096"
-    volumes:
-      - ${MEDIA_PATH}:/media
-      - ${CONFIG_PATH}/emby:/config
-    restart: always
+      - 9000:9000
+    volumes: 
+      - /Users/joshkoopman/Desktop/portainer/port_app/data:/data
 
-  jackett:
-    image: linuxserver/jackett
-    container_name: jackett
-    ports:
-      - "9117:9117"
-    volumes:
-      - ${CONFIG_PATH}/jackett:/config
+  portainer_agent:
+    image: portainer/agent:latest
+    container_name: agent-p
     restart: always
-
-  sonarr:
-    image: linuxserver/sonarr
-    container_name: sonarr
     ports:
-      - "8989:8989"
+      - 9001:9001
     volumes:
-      - ${MEDIA_PATH}:/media
-      - ${CONFIG_PATH}/sonarr:/config
-    restart: always
-
-  radarr:
-    image: linuxserver/radarr
-    container_name: radarr
-    ports:
-      - "7878:7878"
-    volumes:
-      - ${MEDIA_PATH}:/media
-      - ${CONFIG_PATH}/radarr:/config
-    restart: always
-
-  qbittorrent:
-    image: linuxserver/qbittorrent
-    container_name: qbittorrent
-    ports:
-      - "${QBITTORRENT_PORT}:8080"
-    volumes:
-      - ${DOWNLOAD_PATH}:/downloads
-      - ${CONFIG_PATH}/qbittorrent:/config
-    restart: always
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
